# failure-system-experiments

./: Cargo.toml  README.md
common/: Cargo.toml
common/src/: error.rs  identifier.rs  kind.rs  lib.rs  packed.rs  serialized.rs  untyped.rs
common1/: Cargo.toml
common1/src/error_types/: description.rs  domains.rs  identifier.rs  mod.rs  packed.rs
common2/: Cargo.toml
user1/: Cargo.toml
user1/src/: domains.rs  error.rs  error_definitions.rs  main.rs  tests.rs
user1/src/error/: domains.rs  mod.rs
user2/: Cargo.toml
user2/src/: main.rs
zksync_error/: Cargo.toml
zksync_error/src/: error.rs  identifier.rs  kind.rs  lib.rs  packed.rs  serialized.rs  untyped.rs
zksync_error/src/error/: definitions.rs  domains.rs  mod.rs
