[package]
name = "user1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
strum = "0.26.3"
strum_macros = "0.26.4"

# common1 = {path = "../common1" }
common = { path = "../common" }
